<resources>
    <string name="app_name">RelianceProZoneApp</string>
    <string name="register_new_provider">Register new Provider</string>
    <string name="add_providers_full_name">Add Providers Full Name</string>
    <string name="add_providers_descr">Add Providers Description</string>
    <string name="add_providers_address">Add Providers Address</string>
    <string name="update_profile">Update Profile</string>
    <string name="samuel_iwuchukwu">Samuel Iwuchukwu</string>
    <string name="gymn_provider">Gymn Provider</string>
    <string name="ibadan_nigeria">Ibadan Nigeria</string>
    <string name="act_lab">Active</string>
    <string name="five_rate">5 rating</string>
    <string name="riv_stat">Rivers State</string>
    <string name="kolap_health_center">Kolapo Health Center</string>
    <string name="upload_picture_lab">Upload Picture</string>
    <string name="onboard_lab">Onboard</string>
    <string name="upload_image_lav">Upload Image</string>
    <string name="add_provider_state">Add Provider State</string>
    <string name="select_provider_status">Select Provider Status</string>
    <string name="select_provider_type_lab">Select Provider Type</string>
    <string name="add_provider_id_lab">Add Provider Id</string>
    <string name="query_lab">Search Value</string>
    <string name="enter_search_text">Enter Search Text</string>
</resources>