<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cons_pro_zone_details"
    tools:context=".RelianceProZoneProviderDetails">


    <androidx.cardview.widget.CardView
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_margin="36dp"
        app:layout_constraintTop_toTopOf="@id/cons_pro_zone_details"
        app:layout_constraintEnd_toEndOf="@id/cons_pro_zone_details"
        android:id="@+id/card_edt_profile"
        android:thicknessRatio="1.3"
        app:cardCornerRadius="32dp"
        app:layout_constraintStart_toStartOf="@id/cons_pro_zone_details"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"

        android:shape="ring">
        <ImageView
            android:id="@+id/img_edt_user_prof"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_name"
            tools:src="@mipmap/reliance_upl_ico_round"/>



    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/cons_pro_zone_details"
        app:layout_constraintEnd_toEndOf="@id/cons_pro_zone_details"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/card_edt_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtProvName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:fontFamily="@font/fauna_one"
            android:textSize="12sp"
            android:padding="13dp"
            android:drawablePadding="6dp"
            android:background="@drawable/edit_text_back"
            android:layout_margin="6dp"
            android:inputType="text"
            android:drawableStart="@drawable/ic_person_icon"
            android:hint="@string/samuel_iwuchukwu"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/edtProvDescr"
            android:textSize="12sp"
            android:hint="@string/gymn_provider"
            android:inputType="text"
            android:layout_weight="4"
            android:textStyle="bold"
            android:padding="13dp"
            android:drawablePadding="6dp"
            android:background="@drawable/edit_text_back"
            android:layout_margin="6dp"
            android:drawableStart="@drawable/ic_person_icon"
            android:fontFamily="@font/fauna_one"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtProvAddr"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="4"
            android:background="@drawable/edit_text_back"
            android:drawableStart="@drawable/ic_location_icon"
            android:drawablePadding="6dp"
            android:fontFamily="@font/fauna_one"
            android:hint="@string/ibadan_nigeria"
            android:textSize="12sp"
            android:textStyle="bold"
            android:inputType="textMultiLine"
            android:padding="13dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtProvStatus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:drawableStart="@drawable/ic_person_icon"
            android:fontFamily="@font/fauna_one"
            android:layout_weight="4"
            android:textSize="12sp"
            android:textStyle="bold"
            android:padding="13dp"
            android:drawablePadding="6dp"
            android:background="@drawable/edit_text_back"
            android:layout_margin="6dp"
            android:hint="@string/act_lab"
            android:inputType="text"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtProvType"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:drawableStart="@drawable/ic_person_icon"
            android:fontFamily="@font/fauna_one"
            android:layout_weight="4"
            android:textSize="12sp"
            android:textStyle="bold"
            android:padding="13dp"
            android:drawablePadding="6dp"
            android:background="@drawable/edit_text_back"
            android:layout_margin="6dp"
            android:hint="@string/gymn_provider"
            android:inputType="text"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtProfRating"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:drawableStart="@drawable/ic_star_rate"
            android:fontFamily="@font/fauna_one"
            android:layout_weight="4"
            android:textSize="12sp"
            android:textStyle="bold"
            android:padding="13dp"
            android:drawablePadding="6dp"
            android:background="@drawable/edit_text_back"
            android:layout_margin="6dp"
            android:hint="@string/five_rate"
            android:inputType="text"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtProvState"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:drawableStart="@drawable/ic_location_icon"
            android:fontFamily="@font/fauna_one"
            android:layout_weight="4"
            android:textSize="12sp"
            android:textStyle="bold"
            android:padding="13dp"
            android:drawablePadding="6dp"
            android:background="@drawable/edit_text_back"
            android:layout_margin="6dp"
            android:hint="@string/riv_stat"
            android:inputType="text"
            />



        <Button
            android:id="@+id/button_edt_prof"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="4"
            android:background="@drawable/button_back_color"
            android:textColor="@color/design_default_color_surface"
            android:fontFamily="@font/fauna_one"
            android:text="@string/update_profile"
            />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>