<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:layout_margin="4dp"
    android:id="@+id/cons_pro_zone_add"
    tools:context=".RelianceProZoneAddNewProvider">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/cons_pro_zone_add"
        app:layout_constraintStart_toStartOf="@id/cons_pro_zone_add"
        app:layout_constraintTop_toTopOf="@id/cons_pro_zone_add"
        android:fontFamily="@font/fauna_one"
        android:textSize="13sp"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:id="@+id/tv_reg_prov_lab"
        android:textAlignment="center"
        android:text="@string/register_new_provider"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@id/cons_pro_zone_add"
        app:layout_constraintTop_toBottomOf="@+id/tv_reg_prov_lab"
        app:layout_constraintEnd_toStartOf="@id/tv_upl_church"
        android:scaleType="fitCenter"
        android:id="@+id/img_prov_pics"
        android:contentDescription="@string/app_name"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/reliance_upl_ico_foreground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="64dp"
        android:padding="8dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintEnd_toEndOf="@id/cons_pro_zone_add"
        app:layout_constraintStart_toEndOf="@id/img_prov_pics"
        app:layout_constraintTop_toBottomOf="@id/tv_reg_prov_lab"
        android:id="@+id/tv_upl_church"
        android:text="Upload Picture"
        android:fontFamily="@font/fauna_one"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:id="@+id/lin_main1"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="@id/cons_pro_zone_add"
        app:layout_constraintEnd_toEndOf="@id/cons_pro_zone_add"
        app:layout_constraintTop_toBottomOf="@id/img_prov_pics">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawableStart="@drawable/ic_person_icon"
            android:drawablePadding="4dp"
            android:fontFamily="@font/fauna_one"
            android:hint="@string/add_providers_full_name"
             />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"

            android:drawableStart="@drawable/ic_person_icon"
            android:drawablePadding="4dp"
            android:fontFamily="@font/fauna_one"
            android:hint="@string/add_providers_descr"
             />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prov_addr"
            android:layout_width="match_parent"
            android:fontFamily="@font/fauna_one"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawableStart="@drawable/ic_location_icon"
            android:drawablePadding="4dp"
            android:hint="@string/add_providers_address"
             />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prov_type"
            android:layout_width="match_parent"
            android:fontFamily="@font/fauna_one"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawableStart="@drawable/ic_location_icon"
            android:drawablePadding="4dp"
            android:hint="Add Provider State"
            />

        <TextView
            android:id="@+id/tv_prov_lab_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawablePadding="4dp"
            android:textAlignment="center"
            android:fontFamily="@font/fauna_one"
            android:hint="Select Provider Type"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:id="@+id/spin_onb_prov"
            android:fontFamily="@font/fauna_one"
            android:padding="4dp"/>

        <TextView
            android:id="@+id/tv_prov_lab_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/fauna_one"
            android:textAlignment="center"
            android:hint="Select Provider Status"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:id="@+id/spin_onboard_stat"
            android:fontFamily="@font/fauna_one"
            android:padding="4dp"/>

    </LinearLayout>

   <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/tv_lab_prov_det"
        android:text="Add Images of Providers work"
        android:layout_margin="8dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@id/cons_pro_zone_add"
        app:layout_constraintStart_toStartOf="@id/cons_pro_zone_add"
        app:layout_constraintTop_toBottomOf="@id/lin_main1"
        android:fontFamily="@font/fauna_one"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/cons_pro_zone_add"
        app:layout_constraintEnd_toEndOf="@id/cons_pro_zone_add"
        android:layout_margin="8dp"
        android:id="@+id/lin_main2"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_lab_prov_det">

<ImageButton
    android:layout_width="88dp"
    android:layout_height="match_parent"
    android:src="@drawable/ic_prov_add"
    android:background="#ffffff"
    android:padding="8dp"
    android:layout_margin="4dp"
    android:scaleType="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"

            android:scaleType="fitCenter"
            android:id="@+id/img_prov_pics1"
            android:contentDescription="@string/app_name"
            android:layout_margin="4dp"

            android:src="@mipmap/reliance_upl_ico_foreground"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"

            android:scaleType="fitCenter"
            android:id="@+id/img_prov_pics2"
            android:contentDescription="@string/app_name"
            android:layout_margin="4dp"
            android:src="@mipmap/reliance_upl_ico_foreground"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"

            android:scaleType="fitCenter"
            android:id="@+id/img_prov_pics3"
            android:contentDescription="@string/app_name"
            android:layout_margin="4dp"
            android:src="@mipmap/reliance_upl_ico_foreground"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"

            android:scaleType="fitCenter"
            android:id="@+id/img_prov_pics4"
            android:contentDescription="@string/app_name"
            android:layout_margin="4dp"
            android:src="@mipmap/reliance_upl_ico_foreground"/>

    </LinearLayout>
-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Onboard"
        android:id="@+id/btn_add_provid"
        android:layout_margin="8dp"
        android:background="@drawable/button_back_color"
        app:layout_constraintTop_toBottomOf="@id/lin_main1"
        app:layout_constraintStart_toStartOf="@id/cons_pro_zone_add"
        app:layout_constraintEnd_toEndOf="@id/cons_pro_zone_add"
        app:layout_constraintBottom_toBottomOf="@id/cons_pro_zone_add"
        android:textColor="#ffffff"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>